# grid-ba-parser

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  batch.py  config.py  extraction.py  main.py  models.py  normalization.py  ocr.py  pdf_utils.py  pipeline.py  storage.py  supabase_sync.py  vlm.py
apps/api/scripts/: scan_and_export.py
apps/api/tests/: test_batch.py  test_config.py  test_extraction.py  test_normalization.py  test_validation.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
docs/: local-vlm-ubuntu.md  parser-prototype-plan.md
grid_ba_parser/: __init__.py  __main__.py  parser.py
mock_db_exports/: 08b48c1e-d7ee-46b5-a574-5d73ec9d550f.json
supabase/: schema.sql
tests/: test_parser.py
